deploy: 6aba6a54231b5430aaa5b8ea6d2809a3712f12dc

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="project">
   <span class="title">VizGroup</span>
   
-    <span class="preview-image" style="background-image: url('/images/projects/vizgroup.png')"></span>
+    <span class="preview-image" style="background-image: url('/images/projects/images/vizgroup.png')"></span>
   
   <p>
     Vizgroup is an LLMs-assisted system for real-time collaborative learning analytics, visualizes student performance and collaboration via a dynamic 2D scatter plot and provides proactive notifications for timely interventions.
@@ -121,7 +121,7 @@
       <div class="project">
   <span class="title">VizPI</span>
   
-    <a href="https://vizpi.org/" class="preview-image" style="background-image: url('/images/projects/vizpi.png')"></a>
+    <a href="https://vizpi.org/" class="preview-image" style="background-image: url('/images/projects/images/vizpi.png')"></a>
   
   <p>
     VizPI is a system that helps instructors understand and monitor student’s group discussion in real time.
@@ -149,7 +149,7 @@
       <div class="project">
   <span class="title">SmartDrop</span>
   
-    <span class="preview-image" style="background-image: url('/images/projects/smartdrop.png')"></span>
+    <span class="preview-image" style="background-image: url('/images/projects/images/smartdrop.png')"></span>
   
   <p>
     Smartdrop is an accessible eyedrop dispenser for people with low vision and motor disabilities.
