--- a/projects/index.html
+++ b/projects/index.html
@@ -65,7 +65,7 @@
     <div class="project">
   <span class="title">VizGroup</span>
   
-    <span class="preview-image" style="background-image: url('/images/projects/vizgroup.png')"></span>
+    <span class="preview-image" style="background-image: url('/images/projects/images/vizgroup.png')"></span>
   
   <p>
     Vizgroup is an LLMs-assisted system for real-time collaborative learning analytics, visualizes student performance and collaboration via a dynamic 2D scatter plot and provides proactive notifications for timely interventions.
@@ -91,7 +91,7 @@
     <div class="project">
   <span class="title">VizPI</span>
   
-    <a href="https://vizpi.org/" class="preview-image" style="background-image: url('/images/projects/vizpi.png')"></a>
+    <a href="https://vizpi.org/" class="preview-image" style="background-image: url('/images/projects/images/vizpi.png')"></a>
   
   <p>
     VizPI is a system that helps instructors understand and monitor student’s group discussion in real time.
@@ -117,7 +117,7 @@
     <div class="project">
   <span class="title">SPHERE</span>
   
-    <a href="https://www.cs.washington.edu/research/sphere/" class="preview-image" style="background-image: url('/images/projects/sphere.png')"></a>
+    <a href="https://www.cs.washington.edu/research/sphere/" class="preview-image" style="background-image: url('/images/projects/images/sphere.png')"></a>
   
   <p>
     SPHERE is a system that helps instructors to give feedback to students at scale.
@@ -141,7 +141,7 @@
     <div class="project">
   <span class="title">SmartDrop</span>
   
-    <span class="preview-image" style="background-image: url('/images/projects/smartdrop.png')"></span>
+    <span class="preview-image" style="background-image: url('/images/projects/images/smartdrop.png')"></span>
   
   <p>
     Smartdrop is an accessible eyedrop dispenser for people with low vision and motor disabilities.
