--- a/_publications/2023-vizpi.html
+++ b/_publications/2023-vizpi.html
@@ -21,7 +21,7 @@ tags:
 venue_url: https://uist.acm.org/uist2023/ 
 arxiv: "2408.03503"
 pdf: https://chensivan.github.io/papers/vizpi.pdf
-html: https://chensivan.github.io/papers/vizpi.pdf
+html: https://dl.acm.org/doi/10.1145/3586182.3616632
 highlight: true
 ---
 
