--- a/_publications/2024-vizgroup copy 2.html
+++ b/_publications/2024-vizgroup copy 2.html
@@ -15,7 +15,7 @@ tags:
   - Learning Analytics
 title: "VizGroup: An AI-assisted Event-driven System for Collaborative Programming Learning Analytics"
 type:
-  - Demo
+  - Conference
 venue: UIST
 venue_location: "Pittsburgh, PA, USA"
 venue_tags:
