--- a/_publications/2025-SPHERE.html
+++ b/_publications/2025-SPHERE.html
@@ -15,10 +15,9 @@ tags:
   - Learning Analytics
 title: "SPHERE: Scaling Personalized Feedback in Programming Classrooms with Structured Review of LLM Outputs"
 type:
-  - Conference
-  - Late Breaking Work
+  - Poster
 venue: CHI
-venue_location: "Yokihama, Japan"
+venue_location: "Yokohama, Japan"
 venue_tags:
   - CHI
 venue_url: https://chi2025.acm.org/
